--- a/PowerPack/v.01/PowerPack/src/PowerPack/com/panel/Graphs.mxml
+++ b/PowerPack/v.01/PowerPack/src/PowerPack/com/panel/Graphs.mxml
@@ -86,6 +86,8 @@
 			}
 			
 			static public const TPL_CHANGED:String = "templateChanged";
+			static public const POPULATED:String = "templateChanged";
+			static public const DEFAULT_TABS:Array = ["application", "objects", "structure", "resources"];
 				    
 		    //--------------------------------------------------------------------------
 		    //
@@ -124,7 +126,7 @@
 				// We need to repopulate graphs if templateXML has been changed
 				BindingUtils.bindSetter(populateGraphs, this, "templateXML");
 				
-				for each(var label:String in ["application", "objects", "structure", "resources"])
+				for each(var label:String in DEFAULT_TABS)
 				{
 					createCategoryTab(label);
 				}
@@ -134,7 +136,7 @@
 			
 			public function clear():void
 			{
-				// remove all except first 'none' position
+				// remove all from init cbox except first 'none' position
 				while(initGraphs.length>1)
 					initGraphs.removeItemAt(1);				
 				
@@ -145,7 +147,7 @@
 				graphsAccordion.removeAllChildren();
 				tabMap = new Dictionary();
 				
-				for each(var label:String in ["application", "objects", "structure", "resources"])
+				for each(var label:String in DEFAULT_TABS)
 				{
 					createCategoryTab(label);
 				}
@@ -191,12 +193,12 @@
 				graph.addEventListener(GraphCanvasEvent.GRAPH_CHANGED, onGraphChange);				
 				
 				var graphAccordionChild:AccordionChild = null;
-
-				for(var i:int=0; i<graphsAccordion.numChildren; i++)
+				
+				for each (var tab:AccordionChild in graphsAccordion.getChildren())
 				{
-					if(AccordionChild(graphsAccordion.getChildAt(i)).label==graph.category)
+					if(tab.label==graph.category)
 					{
-						graphAccordionChild = graphsAccordion.getChildAt(i) as AccordionChild;
+						graphAccordionChild = tab;						
 						break;
 					}
 				}
@@ -322,8 +324,7 @@
 						graphsAccordion.selectedChild = curTab;
 						curTab.lstGraphs.selectedItem = curGraph;
 						
-						callLater(curTab.lstGraphs.scrollToIndex, [curTab.graphs.getItemIndex(curGraph)]);
-						//curTab.lstGraphs.scrollToIndex(curTab.graphs.getItemIndex(curGraph));							
+						curTab.lstGraphs.scrollToIndex(curTab.graphs.getItemIndex(curGraph));							
 
 						if(!vsViewStack.contains(graph))
 						{
@@ -384,7 +385,6 @@
 					
 					dispatchEvent(new Event(TPL_CHANGED));
 				}
-				
 			}
 						
 			/** 
@@ -394,6 +394,14 @@
 			{
 				var structXML:XML = new XML(<structure/>);
 				
+				structXML.appendChild(<categories/>);
+				for each (var tab:AccordionChild in graphsAccordion.getChildren())
+				{
+					var tabXML:XML = XML(<category/>);
+					tabXML.name = tab.label;
+					structXML.categories.appendChild(tabXML);
+				}
+								
 				for each (var graph:GraphCanvas in graphs)
 				{
 					var graphXML:XML = graph.toXML();		
@@ -588,9 +596,7 @@
 				
 				selectGraph(newGraph);
 				
-				child.lstGraphs.validateNow();
-				callLater(child.lstGraphs.scrollToIndex, [child.graphs.getItemIndex(newGraph)]);
-				//child.lstGraphs.scrollToIndex(child.graphs.getItemIndex(newGraph));
+				child.lstGraphs.scrollToIndex(child.graphs.getItemIndex(newGraph));
 				
 				child.lstGraphs.editable = true; 
 				child.lstGraphs.editedItemPosition = {rowIndex: child.lstGraphs.selectedIndex, columnIndex: 0};
@@ -598,7 +604,7 @@
 				dispatchEvent(new Event(TPL_CHANGED));
 			}
 				
-			private function btnRenameClickHandler(event:Object):void
+			private function btnRenameClickHandler(event:MouseEvent):void
 			{				
 				if(!curGraph)
 					return;
@@ -618,22 +624,45 @@
 				
 				var newGraph:GraphCanvas = curGraph.clone();
 									
-				newGraph.name = "Copy_of_"+curGraph.name;//NameUtil.createUniqueName(newGraph);
-				newGraph.label = newGraph.name;
 				newGraph.initial = false;
+				newGraph.name = NameUtil.createUniqueName(newGraph);
+				newGraph.name = createUniqueCopyName(curGraph.name, child.graphs); 
+				newGraph.label = newGraph.name;
 
 				addGraph(newGraph);	
 				
 				selectGraph(newGraph);
 				
-				//child.lstGraphs.validateNow();
-				callLater(child.lstGraphs.scrollToIndex, [child.graphs.getItemIndex(newGraph)]);
-				//child.lstGraphs.scrollToIndex(child.graphs.getItemIndex(newGraph));
+				child.lstGraphs.scrollToIndex(child.graphs.getItemIndex(newGraph));
 				
 				child.lstGraphs.editable = true; 
 				child.lstGraphs.editedItemPosition = {rowIndex: child.lstGraphs.selectedIndex, columnIndex: 0};
 				
 				dispatchEvent(new Event(TPL_CHANGED));
+			}
+			
+			public function createUniqueCopyName(name:String, context:Object):String
+			{
+				var index:int = 1;
+				var exists:Boolean = false;
+				var newName:String = name+'_'+index;
+				
+				do
+				{
+					exists = false;
+					newName = name+'_'+index;
+					for each (var obj:Object in context)
+					{
+						if(obj.name == newName)
+						{
+							exists = true;
+							break;
+						} 
+					}
+					index++;
+				} while(exists)
+				
+				return newName;
 			}
 								
 			private function btnDeleteClickHandler(event:MouseEvent):void
@@ -641,8 +670,6 @@
 				if(!curGraph)
 					return;
 				
-				//selectGraph(curGraph);
-
 				var newIndex:int = curTab.lstGraphs.selectedIndex-1;
 				newIndex = newIndex<0 ? 0 : newIndex;
 				
@@ -653,9 +680,6 @@
 				initGraphs.removeItemAt(initGraphs.getItemIndex(curGraph));
 				curTab.graphs.removeItemAt(curTab.lstGraphs.selectedIndex);
 				GraphCanvas(curGraph).dispose();
-				
-				//curTab.lstGraphs.validateNow();
-				//vsViewStack.validateNow();
 				
 				if(curTab.graphs.length>0)
 				{
