change Design in TreeEditor
git-svn-id: http://svn.vdombox.ru/flextools/trunk@3731 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.01/vdom/components/treeEditor/TreeEditor.mxml
+++ b/IDE/v.01/vdom/components/treeEditor/TreeEditor.mxml
@@ -105,7 +105,7 @@
 		
 		if(btSave.selected)
 		{
-			Alert.show("Do You Want to Save changed in Structure?", "Save Change:", 3, this, alertClickSaveStructure);
+			Alert.show("Do You Want to save changed structure in tree?", "Tree:", 3, this, alertClickSaveStructure);
 		} else
 		{
 			hide();
