global changes in WorkArea
git-svn-id: http://svn.vdombox.ru/flextools/trunk@3746 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.01/vdom/controls/multiLine/MultiLineWindow.mxml
+++ b/IDE/v.01/vdom/controls/multiLine/MultiLineWindow.mxml
@@ -59,7 +59,7 @@ public static function show_window(title:String, attrVal:String, parent:DisplayO
 	else {
 		PopUpManager.bringToFront(wnd);
 	}
-
+	wnd.init();
 }
 
 private function init():void
