--- a/PowerPack/v.01/PowerPack/src/PowerPack/com/panel/Graphs.mxml
+++ b/PowerPack/v.01/PowerPack/src/PowerPack/com/panel/Graphs.mxml
@@ -362,7 +362,7 @@
 				if(!xml)
 					return; 
 				
-				ProgressManager.show(null, false);
+				ProgressManager.show(ProgressManager.DIALOG_MODE, false);
 				populateGraphs_01();			
 				
 				function populateGraphs_01():void {
