git-svn-id: http://svn.vdombox.ru/flextools/trunk@3770 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/Builder.mxml
+++ b/PowerPack/v.01/PowerPack/src/Builder.mxml
@@ -201,6 +201,8 @@
         	    
         	    CashManager.clear();
         	    
+        	    TemplateStruct.loadLib();
+        	    
 				// Load application settings
 	            ContextManager.loadSettings();
 	            
@@ -235,8 +237,7 @@
 	       		}  
 	       		
             	//trace(LanguageManager.getSentences("<sentense id='' label='{0}'>{1}</sentense>\n"));
-            	//trace(describeType(Dynamic));
-		    	       	
+            	//trace(describeType(TemplateStruct.lib));
 		    }
 	       	
 	       	public function exitApplication(event:Event=null):void
