--- a/IDE/v.01/vdom/components/scriptEditor/scriptEditor2.mxml
+++ b/IDE/v.01/vdom/components/scriptEditor/scriptEditor2.mxml
@@ -241,7 +241,7 @@
         <mx:VBox id="vBox" width="100%" height="100%"  paddingTop="10" paddingLeft="10">
             <containers:TabbedTextArea id="textArea" width="100%"  height="100%"
             		 text="same Text of code"  color="#000000"
-            		 allowTabKey="true"
+            		 allowTabKey="true" fontFamily="coure" fontSize="14" fontGridFitType="pixel" 
             		 keyDown=" textAreaDataChangeHandler( event ); " backgroundColor="#FFFFFF"/>            	 
             <mx:HBox paddingBottom="5" >
 	           <mx:Button id="btSave" label="Save" click=" save(); " />
