--- a/IDE/v.01/vdom/components/scriptEditor/scriptEditor2.mxml
+++ b/IDE/v.01/vdom/components/scriptEditor/scriptEditor2.mxml
@@ -6,6 +6,9 @@
 		 backgroundColor="#3d3d3d">
 <mx:Script>
 	<![CDATA[
+		import mx.collections.SortField;
+		import mx.collections.Sort;
+		import mx.collections.ArrayCollection;
 		import vdom.events.ScriptEditorEvent;
 		import vdom.events.ServerScriptsEvent;
 		import mx.events.CloseEvent;
@@ -22,7 +25,7 @@
 	 	private var dataManager:DataManager = DataManager.getInstance();
 	 	
 	 	[Bindable]
-   			private var arrAppl: Array = new Array();
+   			private var arrAppl: ArrayCollection = new ArrayCollection();
 	 	
 		private var curContainerID:String;
 		private var curContainerTypeID:String;
@@ -48,8 +51,8 @@
 	 			
 	 			
 	 			
-	 			arrAppl = [];
-	 			arrAppl.push({label:"Server Actions", ID:"session"});
+	 			arrAppl.removeAll();
+	 			arrAppl.addItem({label:"Server Actions", ID:"session", iconResID:"", typeID:""});
 	 		/*	for each(var lavel:XML in dataManager.listPages )
 				{
 		 			var ID:String = lavel.@ID;
@@ -70,8 +73,14 @@
 		 			var typeID:String = lavel.@Type.toString();
 		 			var iconResID:String = getIcon(typeID);
 		 			
-		 			arrAppl.push({label:strLabel, ID:ID, iconResID:iconResID});
+		 			arrAppl.addItem({label:strLabel, ID:ID, iconResID:iconResID, typeID:typeID});
 				}
+				
+				
+				var sort : Sort = new Sort();
+				sort.fields = [new SortField("typeID"), new SortField("label", true)];
+				arrAppl.sort = sort;
+				arrAppl.refresh();
 				
 				function searchIndex():int
 				{
@@ -118,7 +127,7 @@
 				return  '';
 			}
 			
-	 	private var getApplEventID:String;
+	 		private var getApplEventID:String;
 	 		private function dataChangedListener(eeEvt:EventEditorEvent):void
 	 		{
 	 			serverScripts.dataProvider = eeEvt.objID;
@@ -259,9 +268,10 @@
 	<mx:HDividedBox width="100%" height="100%" > 
         <mx:VBox id="vBox" width="100%" height="100%"  paddingTop="10" paddingLeft="10">
             <containers:TabbedTextArea id="textArea" width="100%"  height="100%"
-            		 text="same Text of code"  color="#000000"
-            		 allowTabKey="true" fontFamily="coure" fontSize="14" fontGridFitType="pixel" 
-            		 keyDown=" textAreaDataChangeHandler( event ); " backgroundColor="#FFFFFF"/>            	 
+            		 text="same Text of code" 
+            		 
+            		 allowTabKey="true" fontFamily="Courier New" fontSize="12" fontGridFitType="pixel" 
+            		 keyDown=" textAreaDataChangeHandler( event ); " backgroundColor="#FFFFFF" wordWrap="false"/>            	 
             <mx:HBox paddingBottom="5" >
 	           <mx:Button id="btSave" label="Save" click="{save()}" />
 	           <mx:Button label="Revert" click=" revert(); "/>
